fix(front): image size on tablet

--- a/resources/css/prose.css
+++ b/resources/css/prose.css
@@ -217,6 +217,7 @@
       border-radius: 0.375rem;
       padding-block: 0.8571429em;
       padding-inline: 1.1428571em;
+      max-width: calc(100vw - 2rem);
     }
 
     pre code {
